--- a/LibreriaDefinitiva/appsettings.json
+++ b/LibreriaDefinitiva/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultSQLConnection": "Server=LS-PC28\\SQLEXPRESS;Database=LibreriaDefinitiva;TrustServerCertificate=true;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  }
 }
